# quant-research-copilot

./: .env.example  .gitignore  DESIGN.md  progress.md  project3_mapping.md  pyproject.toml
mcp-servers/mcp-backtest/: .env.example  pyproject.toml
mcp-servers/mcp-backtest/src/mcp_backtest/: server.py
mcp-servers/mcp-fred-macro/: .env.example  pyproject.toml
mcp-servers/mcp-fred-macro/.github/workflows/: ci.yml
mcp-servers/mcp-fred-macro/src/mcp_fred_macro/: __init__.py  server.py
mcp-servers/mcp-sec-edgar/: pyproject.toml
mcp-servers/mcp-sec-edgar/src/mcp_sec_edgar/: __init__.py
src/quant_research_copilot/: __init__.py
