[project]
name = "quant-research-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "LovRanRan", email = "13812764054zhc@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
quant-research-copilot = "quant_research_copilot:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
