[project]
name = "mcp-backtest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "LovRanRan", email = "13812764054zhc@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.2.4",
]

[project.scripts]
mcp-backtest = "mcp_backtest:main"

[build-system]
requires = ["uv_build>=0.11.5,<0.12.0"]
build-backend = "uv_build"
